Character를 클래스로 변경
하지만 자꾸  링크에러 가 남

--- a/MudGame/MudGame.vcxproj
+++ b/MudGame/MudGame.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="Line.cpp" />
     <ClCompile Include="map.cpp" />
     <ClCompile Include="MudGame.cpp" />
+    <ClCompile Include="Position.cpp" />
     <ClCompile Include="Swap.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -139,6 +140,7 @@
     <ClInclude Include="Display.h" />
     <ClInclude Include="Line.h" />
     <ClInclude Include="map.h" />
+    <ClInclude Include="Position.h" />
     <ClInclude Include="Swap.h" />
   </ItemGroup>
   <ItemGroup>
