--- a/MudGame/MudGame.vcxproj.filters
+++ b/MudGame/MudGame.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="Swap.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Position.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Line.h">
@@ -48,6 +51,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="Swap.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Position.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
